@@ -1,8 +1,17 @@
+
+
+2005/04/05: Martin Preuss<martin@libchipcard.de>
+-------------------------------------------------
+- added variable "ignoreLines" to CSV plugin. This can be used to skip
+  garbage at the beginning of a CSV file
+
+
 2005-04-04   Christian Stimming <stimming@tuhh.de>
 
 	* src/base/plugin.h: Add PluginManager_GetPaths to enable access
 	to the search paths from the outside. Necessary for aqhbci's
 	mediumprovider.
+
 
 2005/04/04: Martin Preuss<martin@libchipcard.de>
 -------------------------------------------------
